Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Grammar.y
-----------------------------------------------------------------------------

state 22 contains 7 shift/reduce conflicts.
state 36 contains 3 shift/reduce conflicts.

terminal from is unused
terminal crossJoin is unused
terminal concatJoin is unused
terminal as is unused
terminal sequential is unused
terminal rParen is unused
terminal label is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Statement                          (0)
	Statement -> file                                  (1)
	Statement -> QuerySpec                             (2)
	QuerySpec -> select SelectList                     (3)
	QuerySpec -> select SelectList TableExpr           (4)
	SelectList -> SelectList SelectList                (5)
	SelectList -> ast                                  (6)
	SelectList -> labelAst                             (7)
	SelectList -> ColIdent                             (8)
	SelectList -> InterRowQuery                        (9)
	ColIdent -> labelIdx                               (10)
	ColIdent -> const                                  (11)
	ColIdent -> int                                    (12)
	ColIdent -> ColGen                                 (13)
	InterRowQuery -> collect TableReference            (14)
	ColGen -> predPick Predicate ColIdent ColIdent     (15)
	Predicate -> not lParen Predicate lParen           (16)
	Predicate -> Predicate BinaryBoolOperator Predicate   (17)
	Predicate -> ColIdent ComparisonOperator ColIdent   (18)
	BinaryBoolOperator -> and                          (19)
	BinaryBoolOperator -> or                           (20)
	BinaryBoolOperator -> xor                          (21)
	ComparisonOperator -> equals                       (22)
	ComparisonOperator -> lt                           (23)
	ComparisonOperator -> gt                           (24)
	TableExpr -> where                                 (25)
	TableReference -> file                             (26)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	select         { TokenSelect }
	from           { TokenFrom }
	where          { TokenWhere }
	crossJoin      { TokenCrossJoin }
	concatJoin     { TokenConcatJoin }
	as             { TokenAs }
	collect        { TokenCollect }
	sequential     { TokenSequential }
	predPick       { TokenPredPick }
	and            { TokenAnd }
	or             { TokenOr }
	xor            { TokenXOr }
	not            { TokenNot }
	equals         { TokenEquals }
	lt             { TokenLT }
	gt             { TokenGT }
	lParen         { TokenLParen }
	rParen         { TokenRParen }
	file           { TokenFile $$ }
	const          { TokenConst $$ }
	labelIdx       { TokenLabelledIndex _ _ }
	int            { TokenInt $$ }
	labelAst       { TokenLabelledAsterisk $$ }
	ast            { TokenAsterisk }
	label          { TokenLabel $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Statement       rules 1, 2
	QuerySpec       rules 3, 4
	SelectList      rules 5, 6, 7, 8, 9
	ColIdent        rules 10, 11, 12, 13
	InterRowQuery   rule  14
	ColGen          rule  15
	Predicate       rules 16, 17, 18
	BinaryBoolOperator rules 19, 20, 21
	ComparisonOperator rules 22, 23, 24
	TableExpr       rule  25
	TableReference  rule  26

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parse -> . Statement                         (rule 0)

	select         shift, and enter state 5
	file           shift, and enter state 2

	Statement      goto state 3
	QuerySpec      goto state 4

State 1

	Statement -> . file                                 (rule 1)

	file           shift, and enter state 2


State 2

	Statement -> file .                                 (rule 1)

	%eof           reduce using rule 1


State 3

	%start_parse -> Statement .                         (rule 0)

	%eof           accept


State 4

	Statement -> QuerySpec .                            (rule 2)

	%eof           reduce using rule 2


State 5

	QuerySpec -> select . SelectList                    (rule 3)
	QuerySpec -> select . SelectList TableExpr          (rule 4)

	collect        shift, and enter state 10
	predPick       shift, and enter state 11
	const          shift, and enter state 12
	labelIdx       shift, and enter state 13
	int            shift, and enter state 14
	labelAst       shift, and enter state 15
	ast            shift, and enter state 16

	SelectList     goto state 6
	ColIdent       goto state 7
	InterRowQuery  goto state 8
	ColGen         goto state 9

State 6

	QuerySpec -> select SelectList .                    (rule 3)
	QuerySpec -> select SelectList . TableExpr          (rule 4)
	SelectList -> SelectList . SelectList               (rule 5)

	where          shift, and enter state 24
	collect        shift, and enter state 10
	predPick       shift, and enter state 11
	const          shift, and enter state 12
	labelIdx       shift, and enter state 13
	int            shift, and enter state 14
	labelAst       shift, and enter state 15
	ast            shift, and enter state 16
	%eof           reduce using rule 3

	SelectList     goto state 22
	ColIdent       goto state 7
	InterRowQuery  goto state 8
	ColGen         goto state 9
	TableExpr      goto state 23

State 7

	SelectList -> ColIdent .                            (rule 8)

	where          reduce using rule 8
	collect        reduce using rule 8
	predPick       reduce using rule 8
	const          reduce using rule 8
	labelIdx       reduce using rule 8
	int            reduce using rule 8
	labelAst       reduce using rule 8
	ast            reduce using rule 8
	%eof           reduce using rule 8


State 8

	SelectList -> InterRowQuery .                       (rule 9)

	where          reduce using rule 9
	collect        reduce using rule 9
	predPick       reduce using rule 9
	const          reduce using rule 9
	labelIdx       reduce using rule 9
	int            reduce using rule 9
	labelAst       reduce using rule 9
	ast            reduce using rule 9
	%eof           reduce using rule 9


State 9

	ColIdent -> ColGen .                                (rule 13)

	where          reduce using rule 13
	collect        reduce using rule 13
	predPick       reduce using rule 13
	and            reduce using rule 13
	or             reduce using rule 13
	xor            reduce using rule 13
	equals         reduce using rule 13
	lt             reduce using rule 13
	gt             reduce using rule 13
	lParen         reduce using rule 13
	const          reduce using rule 13
	labelIdx       reduce using rule 13
	int            reduce using rule 13
	labelAst       reduce using rule 13
	ast            reduce using rule 13
	%eof           reduce using rule 13


State 10

	InterRowQuery -> collect . TableReference           (rule 14)

	file           shift, and enter state 21

	TableReference goto state 20

State 11

	ColGen -> predPick . Predicate ColIdent ColIdent    (rule 15)

	predPick       shift, and enter state 11
	not            shift, and enter state 19
	const          shift, and enter state 12
	labelIdx       shift, and enter state 13
	int            shift, and enter state 14

	ColIdent       goto state 17
	ColGen         goto state 9
	Predicate      goto state 18

State 12

	ColIdent -> const .                                 (rule 11)

	where          reduce using rule 11
	collect        reduce using rule 11
	predPick       reduce using rule 11
	and            reduce using rule 11
	or             reduce using rule 11
	xor            reduce using rule 11
	equals         reduce using rule 11
	lt             reduce using rule 11
	gt             reduce using rule 11
	lParen         reduce using rule 11
	const          reduce using rule 11
	labelIdx       reduce using rule 11
	int            reduce using rule 11
	labelAst       reduce using rule 11
	ast            reduce using rule 11
	%eof           reduce using rule 11


State 13

	ColIdent -> labelIdx .                              (rule 10)

	where          reduce using rule 10
	collect        reduce using rule 10
	predPick       reduce using rule 10
	and            reduce using rule 10
	or             reduce using rule 10
	xor            reduce using rule 10
	equals         reduce using rule 10
	lt             reduce using rule 10
	gt             reduce using rule 10
	lParen         reduce using rule 10
	const          reduce using rule 10
	labelIdx       reduce using rule 10
	int            reduce using rule 10
	labelAst       reduce using rule 10
	ast            reduce using rule 10
	%eof           reduce using rule 10


State 14

	ColIdent -> int .                                   (rule 12)

	where          reduce using rule 12
	collect        reduce using rule 12
	predPick       reduce using rule 12
	and            reduce using rule 12
	or             reduce using rule 12
	xor            reduce using rule 12
	equals         reduce using rule 12
	lt             reduce using rule 12
	gt             reduce using rule 12
	lParen         reduce using rule 12
	const          reduce using rule 12
	labelIdx       reduce using rule 12
	int            reduce using rule 12
	labelAst       reduce using rule 12
	ast            reduce using rule 12
	%eof           reduce using rule 12


State 15

	SelectList -> labelAst .                            (rule 7)

	where          reduce using rule 7
	collect        reduce using rule 7
	predPick       reduce using rule 7
	const          reduce using rule 7
	labelIdx       reduce using rule 7
	int            reduce using rule 7
	labelAst       reduce using rule 7
	ast            reduce using rule 7
	%eof           reduce using rule 7


State 16

	SelectList -> ast .                                 (rule 6)

	where          reduce using rule 6
	collect        reduce using rule 6
	predPick       reduce using rule 6
	const          reduce using rule 6
	labelIdx       reduce using rule 6
	int            reduce using rule 6
	labelAst       reduce using rule 6
	ast            reduce using rule 6
	%eof           reduce using rule 6


State 17

	Predicate -> ColIdent . ComparisonOperator ColIdent    (rule 18)

	equals         shift, and enter state 32
	lt             shift, and enter state 33
	gt             shift, and enter state 34

	ComparisonOperatorgoto state 31

State 18

	ColGen -> predPick Predicate . ColIdent ColIdent    (rule 15)
	Predicate -> Predicate . BinaryBoolOperator Predicate    (rule 17)

	predPick       shift, and enter state 11
	and            shift, and enter state 28
	or             shift, and enter state 29
	xor            shift, and enter state 30
	const          shift, and enter state 12
	labelIdx       shift, and enter state 13
	int            shift, and enter state 14

	ColIdent       goto state 26
	ColGen         goto state 9
	BinaryBoolOperatorgoto state 27

State 19

	Predicate -> not . lParen Predicate lParen          (rule 16)

	lParen         shift, and enter state 25


State 20

	InterRowQuery -> collect TableReference .           (rule 14)

	where          reduce using rule 14
	collect        reduce using rule 14
	predPick       reduce using rule 14
	const          reduce using rule 14
	labelIdx       reduce using rule 14
	int            reduce using rule 14
	labelAst       reduce using rule 14
	ast            reduce using rule 14
	%eof           reduce using rule 14


State 21

	TableReference -> file .                            (rule 26)

	where          reduce using rule 26
	collect        reduce using rule 26
	predPick       reduce using rule 26
	const          reduce using rule 26
	labelIdx       reduce using rule 26
	int            reduce using rule 26
	labelAst       reduce using rule 26
	ast            reduce using rule 26
	%eof           reduce using rule 26


State 22

	SelectList -> SelectList . SelectList               (rule 5)
	SelectList -> SelectList SelectList .               (rule 5)

	where          reduce using rule 5
	collect        shift, and enter state 10
			(reduce using rule 5)

	predPick       shift, and enter state 11
			(reduce using rule 5)

	const          shift, and enter state 12
			(reduce using rule 5)

	labelIdx       shift, and enter state 13
			(reduce using rule 5)

	int            shift, and enter state 14
			(reduce using rule 5)

	labelAst       shift, and enter state 15
			(reduce using rule 5)

	ast            shift, and enter state 16
			(reduce using rule 5)

	%eof           reduce using rule 5

	SelectList     goto state 22
	ColIdent       goto state 7
	InterRowQuery  goto state 8
	ColGen         goto state 9

State 23

	QuerySpec -> select SelectList TableExpr .          (rule 4)

	%eof           reduce using rule 4


State 24

	TableExpr -> where .                                (rule 25)

	%eof           reduce using rule 25


State 25

	Predicate -> not lParen . Predicate lParen          (rule 16)

	predPick       shift, and enter state 11
	not            shift, and enter state 19
	const          shift, and enter state 12
	labelIdx       shift, and enter state 13
	int            shift, and enter state 14

	ColIdent       goto state 17
	ColGen         goto state 9
	Predicate      goto state 38

State 26

	ColGen -> predPick Predicate ColIdent . ColIdent    (rule 15)

	predPick       shift, and enter state 11
	const          shift, and enter state 12
	labelIdx       shift, and enter state 13
	int            shift, and enter state 14

	ColIdent       goto state 37
	ColGen         goto state 9

State 27

	Predicate -> Predicate BinaryBoolOperator . Predicate    (rule 17)

	predPick       shift, and enter state 11
	not            shift, and enter state 19
	const          shift, and enter state 12
	labelIdx       shift, and enter state 13
	int            shift, and enter state 14

	ColIdent       goto state 17
	ColGen         goto state 9
	Predicate      goto state 36

State 28

	BinaryBoolOperator -> and .                         (rule 19)

	predPick       reduce using rule 19
	not            reduce using rule 19
	const          reduce using rule 19
	labelIdx       reduce using rule 19
	int            reduce using rule 19


State 29

	BinaryBoolOperator -> or .                          (rule 20)

	predPick       reduce using rule 20
	not            reduce using rule 20
	const          reduce using rule 20
	labelIdx       reduce using rule 20
	int            reduce using rule 20


State 30

	BinaryBoolOperator -> xor .                         (rule 21)

	predPick       reduce using rule 21
	not            reduce using rule 21
	const          reduce using rule 21
	labelIdx       reduce using rule 21
	int            reduce using rule 21


State 31

	Predicate -> ColIdent ComparisonOperator . ColIdent    (rule 18)

	predPick       shift, and enter state 11
	const          shift, and enter state 12
	labelIdx       shift, and enter state 13
	int            shift, and enter state 14

	ColIdent       goto state 35
	ColGen         goto state 9

State 32

	ComparisonOperator -> equals .                      (rule 22)

	predPick       reduce using rule 22
	const          reduce using rule 22
	labelIdx       reduce using rule 22
	int            reduce using rule 22


State 33

	ComparisonOperator -> lt .                          (rule 23)

	predPick       reduce using rule 23
	const          reduce using rule 23
	labelIdx       reduce using rule 23
	int            reduce using rule 23


State 34

	ComparisonOperator -> gt .                          (rule 24)

	predPick       reduce using rule 24
	const          reduce using rule 24
	labelIdx       reduce using rule 24
	int            reduce using rule 24


State 35

	Predicate -> ColIdent ComparisonOperator ColIdent .    (rule 18)

	predPick       reduce using rule 18
	and            reduce using rule 18
	or             reduce using rule 18
	xor            reduce using rule 18
	lParen         reduce using rule 18
	const          reduce using rule 18
	labelIdx       reduce using rule 18
	int            reduce using rule 18


State 36

	Predicate -> Predicate . BinaryBoolOperator Predicate    (rule 17)
	Predicate -> Predicate BinaryBoolOperator Predicate .    (rule 17)

	predPick       reduce using rule 17
	and            shift, and enter state 28
			(reduce using rule 17)

	or             shift, and enter state 29
			(reduce using rule 17)

	xor            shift, and enter state 30
			(reduce using rule 17)

	lParen         reduce using rule 17
	const          reduce using rule 17
	labelIdx       reduce using rule 17
	int            reduce using rule 17

	BinaryBoolOperatorgoto state 27

State 37

	ColGen -> predPick Predicate ColIdent ColIdent .    (rule 15)

	where          reduce using rule 15
	collect        reduce using rule 15
	predPick       reduce using rule 15
	and            reduce using rule 15
	or             reduce using rule 15
	xor            reduce using rule 15
	equals         reduce using rule 15
	lt             reduce using rule 15
	gt             reduce using rule 15
	lParen         reduce using rule 15
	const          reduce using rule 15
	labelIdx       reduce using rule 15
	int            reduce using rule 15
	labelAst       reduce using rule 15
	ast            reduce using rule 15
	%eof           reduce using rule 15


State 38

	Predicate -> not lParen Predicate . lParen          (rule 16)
	Predicate -> Predicate . BinaryBoolOperator Predicate    (rule 17)

	and            shift, and enter state 28
	or             shift, and enter state 29
	xor            shift, and enter state 30
	lParen         shift, and enter state 39

	BinaryBoolOperatorgoto state 27

State 39

	Predicate -> not lParen Predicate lParen .          (rule 16)

	predPick       reduce using rule 16
	and            reduce using rule 16
	or             reduce using rule 16
	xor            reduce using rule 16
	lParen         reduce using rule 16
	const          reduce using rule 16
	labelIdx       reduce using rule 16
	int            reduce using rule 16


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 27
Number of terminals: 25
Number of non-terminals: 12
Number of states: 40
